use package.json to define the plugin

--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "name": "sledgehammers",
   "version": "0.1.0",
   "description": "An awesome Kibana plugin",
-  "main": "gulpfile.js"
+  "main": "gulpfile.js",
+  "kibana": {
+    "plugin": {
+      "uiExports": {
+        "sledgehammers": [
+          "plugins/sledgehammers/smash"
+        ]
+      }
+    }
+  }
 }
